# ebarimt-pos-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_MN.md  codecov.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  redocly.yaml  ruff.toml  skills-lock.json  target-redocly.yaml  ty.toml
.github/workflows/: ci.yml  oasdiff.yaml  python-dev-tools.yaml  release.yaml  spec-guard.yaml  unit-tests.yaml
docs/source/: conf.py  index.md
docs/source/api/: ebarimt_pos_sdk.resources.receipt.rst  ebarimt_pos_sdk.resources.rst  ebarimt_pos_sdk.rst  ebarimt_pos_sdk.transport.rst  modules.rst
spec/: README.md
spec/openapi/: posapi-3.0.1.yaml  posapi-3.0.yaml
src/ebarimt_pos_sdk/: __init__.py  _http.py  _logging.py  _redaction.py  _types.py  client.py  errors.py  factory.py  settings.py
src/ebarimt_pos_sdk/auth/: __init__.py  password_grant.py  token.py
src/ebarimt_pos_sdk/clients/: __init__.py  api_client.py  base_client.py  rest_client.py
src/ebarimt_pos_sdk/resources/: __init__.py  base_model.py  base_resource.py  enum.py  http.py  receipt.py  resource.py
src/ebarimt_pos_sdk/settings/: __init__.py  api_client_settings.py  base_settings.py  rest_client_settings.py  retry_settings.py
src/ebarimt_pos_sdk/transport/: __init__.py  async_transport.py  http.py  (+1 more)
tests/: helpers.py  test_bank_accounts.py  test_bank_accounts_async.py  test_bank_accounts_sync.py  test_district_code.py  test_errors.py  test_info.py  test_info_async.py  test_info_sync.py  test_merchant_info.py  test_product_tax_code.py  test_receipt.py  test_receipt_async.py  test_receipt_sync.py  test_send_data.py  test_send_data_sync.py  test_tin_info.py
tests/data/: auth.py  bank_accounts.py  buna.py  district_code.py  info.py  merchant_info.py  product_tax_code.py  receipt.py  tin_info.py
tests/integration/: test_info.py  test_integration_api.py  test_integration_bank_accounts.py  test_integration_info.py  test_integration_receipt.py  test_integration_send_data.py  test_receipt.py
tests/mock/: test_auth.py  test_bank_accounts.py  test_base_model_aliases.py  test_buna.py  test_client_headers.py  test_district_code.py  test_info.py  test_logging.py  test_merchant_info.py  test_product_tax_code.py  test_proxy.py  test_receipt.py  test_send_data.py  test_tin_info.py  test_transport.py
tools/: spec-bundle.mjs
(+27 files in other folders)
