[project]
name = "ebarimt-pos-sdk"
version = "0.0.0"
description = "Python SDK for Ebarimt POS API 3.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SenergyTech" }]
dependencies = ["httpx>=0.27.0", "pydantic>=2.7.0"]


[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "respx>=0.22.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "respx>=0.22.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = ["src"]
